force-app/main/default/objects/BatchJobLogs__c/BatchJobLogs__c.object-meta.xml
<CustomObject>
    <label>Batch Job Logs</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Job Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>