force-app/main/default/objects/BatchJobLogs__c/fields/Error_Component__c.field-meta.xml
<CustomField>
    <fullName>Error_Component__c</fullName>
    <label>Error Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digitization</fullName>
            </value>
            <value>
                <fullName>AI Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>