force-app/main/default/objects/BatchJobLogs__c/fields/ErrorChunk__c.field-meta.xml
<CustomField>
    <fullName>ErrorChunk__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FailedChunkResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>