force-app/main/default/objects/BatchJobLogs__c/fields/Failed_one__c.field-meta.xml
<CustomField>
    <fullName>Failed_one__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Chunk</label>
    <type>Checkbox</type>
</CustomField>