force-app/main/default/objects/BatchJobLogs__c/fields/Job_Ended__c.field-meta.xml
<CustomField>
    <fullName>Job_Ended__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Ended</label>
    <type>DateTime</type>
</CustomField>