force-app/main/default/objects/BatchJobLogs__c/fields/Job_Started__c.field-meta.xml
<CustomField>
    <fullName>Job_Started__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Started</label>
    <type>DateTime</type>
</CustomField>