force-app/main/default/objects/BatchJobLogs__c/fields/Needs_Reprocessing__c.field-meta.xml
<CustomField>
    <fullName>Needs_Reprocessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs_Reprocessing</label>
    <type>Checkbox</type>
</CustomField>