force-app/main/default/objects/BatchJobLogs__c/fields/Prompt_Input__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Input__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prompt_Input</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>