force-app/main/default/objects/BatchJobLogs__c/fields/Prompt_Response__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prompt_Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>