force-app/main/default/objects/BatchJobLogs__c/fields/Reprocess_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Reprocess_Attempt__c</fullName>
    <label>Reprocess_Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>