force-app/main/default/objects/BatchJobLogs__c/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFP</label>
    <referenceTo>RFP__c</referenceTo>
    <relationshipLabel>Batch Job Logs</relationshipLabel>
    <relationshipName>Batch_Job_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>